# Sudoku-Solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.c  solver.c  solver.h  sudoku.c  sudoku.h
tests/: solver_test.h  sudoku_test.h  unit_tests.c
